--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -1,4 +1,3 @@
-/* Ajusta o espaçamento do conteúdo para não ficar atrás do Header */
 .content {
-  padding-top: 80px; /* Ajuste conforme a altura do Header */
+  padding-top: 80px;
 }
