--- a/frontend/src/pages/Login/components/CarouselComponent/styles.css
+++ b/frontend/src/pages/Login/components/CarouselComponent/styles.css
@@ -1,7 +1,5 @@
-.custom-carousel img {
-  height: 100%;
-  max-height: 500px;
-  object-fit: cover;
+.custom-carousel {
+  width: 100%;
 }
 
 .custom-carousel .carousel-caption {
@@ -12,6 +10,6 @@
 
 @media (max-width: 768px) {
   .custom-carousel .carousel-caption {
-    display: none; /* Esconde mensagens no mobile */
+    display: none;
   }
 }
