--- a/frontend/src/pages/Login/components/LoginData/styles.css
+++ b/frontend/src/pages/Login/components/LoginData/styles.css
@@ -1,40 +1,32 @@
-/* Garante que a tela ocupe 100vh */
 .login-container {
-  /* height: 100vh; */
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden; /* Evita scroll */
-  padding: 0; /* Remove o padding do Bootstrap */
-  margin: 0; /* Remove margens desnecessárias */
+  overflow: hidden; 
+  padding: 0;
+  margin: 0; 
 }
 
-/* Define o layout */
 .login-content {
   width: 100%;
-  /* height: 100%; */
   display: flex;
-  margin: 0; /* Remove margens */
+  margin: 0;
 }
 
-/* Carrossel ocupa metade da tela no desktop */
 .carousel-container {
   display: flex;
   align-items: center;
   justify-content: center;
   background: #f5f5f5;
-  /* height: 100vh; Garante que não tenha scroll */
   padding: 0;
 }
 
-/* Formulário de login */
 .login-form-container {
   display: flex;
   align-items: center;
   justify-content: center;
   background: white;
-  /* height: 100vh; */
   padding: 2rem;
 }
 
@@ -62,7 +54,6 @@
   width: 100%;
 }
 
-/* 📱 Modo Mobile */
 @media (max-width: 768px) {
   .login-content {
     flex-direction: column;
