doc: addition comments in home after login page

--- a/frontend/src/pages/HomeAfterLogin/components/PageData/styles.css
+++ b/frontend/src/pages/HomeAfterLogin/components/PageData/styles.css
@@ -1,27 +1,24 @@
 .custom-card {
-  width: 100%;            /* Garante que o card ocupe toda a largura da coluna */
+  width: 100%;           
   height: 15em;
-  max-width: 220px;       /* Define um tamanho máximo */
-  aspect-ratio: 5/3;      /* Proporção largura maior que altura */
-  margin: 0 auto;         /* Centraliza o card */
+  max-width: 220px;       
+  aspect-ratio: 5/3;      
+  margin: 0 auto;         
 }
 
-/* Imagem do card */
 .card-image {
-  width: 100%;            /* Garante que a imagem ocupe toda a largura do card */
-  aspect-ratio: 20/9;     /* Mantém proporção ideal para a imagem */
+  width: 100%;            
+  aspect-ratio: 20/9;   
   object-fit: cover;
 }
 
-/* A partir de 1200px, os cards começam a crescer automaticamente */
 @media (min-width: 1200px) {
   .custom-card {
     max-width:none;
     height: auto;
-    /* margin: 10px; */
     width: 95%;
-    flex-grow: 1;         /* Permite que o card cresça automaticamente */
-    flex-shrink: 1;       /* Permite que o card encolha se necessário */
+    flex-grow: 1;         
+    flex-shrink: 1;       
   }
 }
 
