--- a/frontend/src/pages/EmployeeManagement/styles.css
+++ b/frontend/src/pages/EmployeeManagement/styles.css
@@ -1,13 +1,11 @@
-/* Faz a página ocupar 100% da tela */
 .base_page {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    overflow: hidden; /* Evita scroll */
+    overflow: hidden;
 }
 
-/* Faz o conteúdo ocupar todo o espaço disponível entre header e footer */
 .page-content {
     flex-grow: 1;
     display: flex;
@@ -15,7 +13,6 @@
     width: 100%;
 }
 
-/* Garante que o Header e Footer fiquem fixos */
 header, footer {
     flex-shrink: 0;
     width: 100%;
