--- a/frontend/src/pages/ProfilePage/components/UserProfile/styles.css
+++ b/frontend/src/pages/ProfilePage/components/UserProfile/styles.css
@@ -1,5 +1,6 @@
 .profile-container {
-  max-width: 600px;
+  max-width: 700px;
+  width: 80%;
   margin: auto;
   padding: 20px;
   background-color: #fff;
