--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -1,3 +1,9 @@
 .content {
-  padding-top: 110px;
+  padding-top: 90px;
+}
+
+@media (min-width: 769px) {
+  .content {
+    padding-top: 110px;
+  }
 }
